overflow fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@ body{
   font-family: Montserrat;
   color: white;
   overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 
